# glitch-lambda

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.bat  docker-compose.yml
artifacts/: bootstrap
lambda/: cdk-outputs.json  cdk.json  package-lock.json  package.json
lambda/lib/: lambda-stack.ts
src/: lib.rs  main.rs
