[package]
name = "glitch"
version = "0.1.0"
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.4.1"
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.68"
tokio = "1.12.0"
rand = "0.8.4"
# jemallocator = "0.3.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
